name:                pure-theme
version:             0.8.0.0
synopsis:            Styled views
homepage:            purehs.org/doc/pure-theme
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-theme.git

library
  exposed-modules:
      Pure.Theme

  build-depends:
      base
    , pure
    , pure-css
    , pure-txt-trie
    , hashable

  hs-source-dirs:      src
  default-language:    Haskell2010

