name:                pure-theme
version:             0.8.0.0
synopsis:            Styled views
homepage:            purehs.org/doc/pure-theme
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-theme.git

library
  exposed-modules:
      Pure.Theme

  build-depends:
      base
    , ef
    , pure-core
    , pure-css
    , pure-dom
    , pure-lifted
    , pure-styles
    , pure-txt
    , pure-txt-trie
    , hashable

  default-extensions:
    AllowAmbiguousTypes
    CPP 
    DataKinds
    ExistentialQuantification
    FlexibleContexts
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RoleAnnotations
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
    DefaultSignatures

  hs-source-dirs:      src
  default-language:    Haskell2010

